<resources>
    <string name="app_name">Layouts weather</string>
    <string name="_13">13</string>
    <string name="tashkent">Tashkent</string>
    <string name="_10_31_am">10:31 AM</string>
    <string name="email_app">Email App</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cloudy">Cloudy</string>
    <string name="_15">15</string>
    <string name="_12">12</string>
    <string name="wednesday_damolish">Wednesday \ Damolish</string>
    <string name="precipitation">Precipitation</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="tonight">Tonight</string>
    <string name="_20">20%</string>
    <string name="_20">20%</string>
    <string name="afternoon">Afternoon</string>
    <string name="_20">20%</string>
    <string name="_10">10%</string>
</resources>