<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/giphy">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/menu"
        android:id="@+id/menu_icon"
        />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="92dp"
        android:text="@string/tashkent"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/menu_icon"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/_10_31_am"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/city"
        app:layout_constraintStart_toStartOf="@id/city"
        app:layout_constraintTop_toBottomOf="@id/city" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textSize="80sp"
        android:text="@string/_13"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="44dp"
        android:src="@drawable/circyle_png"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/num" />

</androidx.constraintlayout.widget.ConstraintLayout>