<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloud"
    tools:context=".email_app.EmailActivity">

    <ImageView
        android:id="@+id/icon_mail"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="280dp"
        android:src="@drawable/gmail_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/email_app"
        app:layout_constraintStart_toStartOf="@id/icon_mail"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icon_mail"
        app:layout_constraintEnd_toEndOf="@id/icon_mail"
        android:text="@string/email_app"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/perm_identity"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintBottom_toTopOf="@+id/lock"
        app:layout_constraintHorizontal_bias="0.786" app:layout_constraintTop_toTopOf="@+id/username"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/email_app"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:padding="25dp"
        android:hint="@string/username"
        android:textSize="50sp"
        android:layout_marginStart="150sp"
        android:layout_marginEnd="55sp"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/lock"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/personal"
        app:layout_constraintEnd_toStartOf="@id/password"
        app:layout_constraintBottom_toBottomOf="@id/password"
        android:src="@drawable/lock"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginRight="55sp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:padding="25dp"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username" />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="40dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="30dp"
        android:background="@color/blue"
        android:text="@string/login"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>