<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/city_at_night"
    tools:context=".weather.weather4.Weather4Activity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/menu"
        android:id="@+id/menu_icon" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="92dp"
        android:text="@string/tashkent"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/menu_icon"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/_10_31_am"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/city"
        app:layout_constraintStart_toStartOf="@id/city"
        app:layout_constraintTop_toBottomOf="@id/city" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Space
        android:id="@+id/devider"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintBottom_toTopOf="@id/precipitation"
        android:layout_width="match_parent"
        android:layout_height="40sp"/>

    <TextView
        android:id="@+id/precipitation"
        app:layout_constraintTop_toBottomOf="@id/devider"
        android:layout_width="match_parent"
        android:text="@string/precipitation"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/space1"
        app:layout_constraintTop_toBottomOf="@id/precipitation"
        android:background="#7A7878"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>
    <LinearLayout
        android:id="@+id/firstData"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/space1"
        android:layout_width="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="#5C7A7777"
        android:layout_height="100dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#B2737171"
            android:layout_marginEnd="3dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/num10"
                android:layout_gravity="top|center"
                android:text="@string/_10"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/invert_colors"/>
            <TextView
                android:id="@+id/cast1"
                android:layout_gravity="top|center"
                android:text="@string/morning"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="#B2737171">

            <TextView
                android:id="@+id/num11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:textColor="@color/white"
                android:text="@string/_20"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/invert_colors"/>
            <TextView
                android:id="@+id/cast2"
                android:layout_gravity="top|center"
                android:text="@string/afternoon"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="3dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="3dp"
            android:background="#B2737171"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/num12"
                android:layout_gravity="top|center"
                android:text="@string/_20"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/invert_colors"/>
            <TextView
                android:id="@+id/cast3"
                android:layout_gravity="top|center"
                android:text="@string/evening"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="3dp"
            android:background="#B2737171"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/num13"
                android:layout_gravity="top|center"
                android:text="@string/_20"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/invert_colors"/>
            <TextView
                android:id="@+id/cast4"
                android:layout_gravity="top|center"
                android:text="@string/tonight"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

    <Space
        android:id="@+id/devider1"
        app:layout_constraintTop_toBottomOf="@+id/firstData"
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <TextView
        android:id="@+id/windPressure"
        app:layout_constraintTop_toBottomOf="@id/devider1"
        android:layout_width="match_parent"
        android:text="Wind vs Pressure"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/space2"
        app:layout_constraintTop_toBottomOf="@id/windPressure"
        android:background="#7A7878"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>
    <LinearLayout
        android:id="@+id/secondData"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/space2"
        android:layout_width="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="#5C7A7777"
        android:layout_height="100dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner5"
            android:layout_width="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#B2737171"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/wind_power"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_weight="1"
            android:background="#B2737171">

            <TextView
                android:id="@+id/num14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:textColor="@color/white"
                android:text="Wind"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/cast6"
                android:layout_gravity="top|center"
                android:text="12.9 km/h SE"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner7"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#B2737171"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#B2737171"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_downward" />

            <TextView
                android:id="@+id/num18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Barometr"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/cast8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="1027.0 mBar"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

    <Space
        android:id="@+id/devider2"
        app:layout_constraintTop_toBottomOf="@+id/secondData"
        android:layout_width="match_parent"
        android:layout_height="50sp"/>

    <TextView
        android:id="@+id/sunMoon"
        app:layout_constraintTop_toBottomOf="@id/devider2"
        android:layout_width="match_parent"
        android:text="Sun vs Moon"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/space3"
        app:layout_constraintTop_toBottomOf="@id/sunMoon"
        android:background="#7A7878"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_width="match_parent"
        android:layout_height="3dp"/>
    <LinearLayout
        android:id="@+id/thirdData"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/space3"
        android:layout_width="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="#5C7A7777"
        android:layout_height="100dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner9"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:background="#B2737171"
            android:layout_height="match_parent">
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_weight="1"
            android:background="#B2737171">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_upward"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/sunny"/>

            <TextView
                android:id="@+id/cast9"
                android:layout_gravity="top|center"
                android:text="6:10 AM"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner11"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="#B2737171"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_downward"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/sunny"/>

            <TextView
                android:id="@+id/cast11"
                android:layout_gravity="center"
                android:text="7:36 AM"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/liner12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#B2737171"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/brightness_6" />

            <TextView
                android:id="@+id/numSun2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="Warming\nCelclum"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/cast10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text=""
                android:textColor="@color/white"
                android:textSize="22sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>